src/main/default/objects/Audit_Log__c/Audit_Log__c.object-meta.xml
<CustomObject>
    <description>Storage for sync (upload) errors and other similar data.</description>
    <label>Audit Log</label>
    <nameField>
        <displayFormat>AL-{0}</displayFormat>
        <label>Audit Log ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Audit Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>