src/main/default/objects/Audit_Log__c/fields/Cleared__c.field-meta.xml
<CustomField>
    <fullName>Cleared__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, the AuditLog has been resolved/cleared and no longer needs to be processed.</inlineHelpText>
    <label>Cleared</label>
    <type>Checkbox</type>
</CustomField>