src/main/default/objects/Audit_Log__c/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <defaultValue>NOW()</defaultValue>
    <inlineHelpText>Date and time of the event recorded by the log entry. For sync upload errors, this is the date and time when the sync failed. For successful syncs, this is the date and time when the sync completed successfully.</inlineHelpText>
    <label>Event Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>