src/main/default/objects/Audit_Log__c/fields/Event_Id__c.field-meta.xml
<CustomField>
    <fullName>Event_Id__c</fullName>
    <inlineHelpText>(Sync upload errors only) ID of the event that caused the sync upload failure.</inlineHelpText>
    <label>Event Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>