src/main/default/objects/Audit_Log__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <inlineHelpText>(Sync upload errors only) Error message explaining why the sync upload failed.</inlineHelpText>
    <label>Message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>