src/main/default/objects/Audit_Log__c/fields/New_Audit_Log__c.field-meta.xml
<CustomField>
    <fullName>New_Audit_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The AuditLog that was created by running this AuditLog via the Packet Viewer.</inlineHelpText>
    <label>New Audit Log</label>
    <referenceTo>Audit_Log__c</referenceTo>
    <relationshipName>New_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>