src/main/default/objects/Audit_Log__c/fields/Originating_Audit_Log__c.field-meta.xml
<CustomField>
    <fullName>Originating_Audit_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The AuditLog that was run via Packet Viewer that created this AuditLog.</inlineHelpText>
    <label>Originating Audit Log</label>
    <referenceTo>Audit_Log__c</referenceTo>
    <relationshipName>Origininating_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>