src/main/default/objects/Audit_Log__c/fields/Package_Id__c.field-meta.xml
<CustomField>
    <fullName>Package_Id__c</fullName>
    <inlineHelpText>(Sync upload errors only) ID number of the package containing the data that failed to sync.</inlineHelpText>
    <label>Package Id</label>
    <length>200</length>
    <type>Text</type>
</CustomField>