src/main/default/objects/Audit_Log__c/fields/Tracking_Number__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Number__c</fullName>
    <inlineHelpText>(Sync upload errors only) Tracking number for the record that caused the sync failure.</inlineHelpText>
    <label>Tracking Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>