src/main/default/objects/Audit_Log__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Type of Log Entry</description>
    <inlineHelpText>Type of log entry.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>SyncComplete</fullName>
            </value>
            <value>
                <fullName>SyncDownloadComplete</fullName>
            </value>
            <value>
                <fullName>SyncUploadError</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>