src/main/default/objects/Audit_Log__c/fields/URL__c.field-meta.xml
<CustomField>
    <fullName>URL__c</fullName>
    <inlineHelpText>(Sync upload errors only) Link to the Sync Errors page that displays details about the sync upload error.</inlineHelpText>
    <label>URL</label>
    <type>Url</type>
</CustomField>